--- a/app/views/static_page/about.html.erb
+++ b/app/views/static_page/about.html.erb
@@ -1,6 +1,5 @@
 <% provide :title, "about" %>
 <div class="about">
   <h1><%= "welcome" %></h1>
-  <p><%= "Hellos" %>
-  </p>
+  <p><%= "Hellos" %></p>
 </div>
