--- a/app/views/static_page/home.html.erb
+++ b/app/views/static_page/home.html.erb
@@ -1,5 +1,7 @@
 <% provide :title, "home" %>
 <div class="center jumbotron">
   <h1><%= t ".welcome" %></h1>
-  <%= link_to "Signup", "#", class: "btn btn-lg btn-primary" %>
+
+  <%= link_to t("devise.sign_up"), new_user_registration_path,
+    class: "btn btn-lg btn-primary" %>
 </div>
