--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -127,3 +127,14 @@ footer {
 .field{
   margin-top: 10px;
 }
+
+.custom-nav{
+  background: #d24227;
+}
+.button{
+  margin-bottom: 10px;
+}
+.fields{
+  margin-top: 10px;
+  margin-bottom: 20px;
+}
