--- a/app/views/static_page/home.html.erb
+++ b/app/views/static_page/home.html.erb
@@ -1,7 +1,6 @@
-<% provide :title, "home" %>
-<div class="center jumbotron">
-  <h1><%= t ".welcome" %></h1>
-
-  <%= link_to t("devise.sign_up"), new_user_registration_path,
-    class: "btn btn-lg btn-primary" %>
-</div>
+<% provide :title, t("title.home") %>
+<% if user_signed_in? %>
+  <%= render "login" %>
+<% else %>
+  <%= render "not_loggin" %>
+<% end %>
