--- a/app/views/exams/new.html.erb
+++ b/app/views/exams/new.html.erb
@@ -1,4 +1,6 @@
-<h2><%= t "exams.new" %></h2>
-<div class="col-md-10 col-md-offset-1 panel panel-default">
-  <%= render "form" %>
+<div class="panel panel-primary">
+  <div class="panel-heading" style="font-size:large;">
+    <%= t "exams.new" %>
+  </div>
+  <div class="panel-body"><%= render "form" %></div>
 </div>
