--- a/app/views/static_page/_login.html.erb
+++ b/app/views/static_page/_login.html.erb
@@ -3,4 +3,7 @@
     <%= link_to t(".create_exams"), new_exam_path, class: "btn btn-danger" %>
     <%= link_to t(".my_exams"), exams_path, class: "btn btn-danger" %>
   </div>
+  <div class="row">
+    <%= link_to t(".create_subjects"), new_subject_path, class: "btn btn-primary" %>
+  </div>
 </div>
