--- a/app/views/exams/_form.html.erb
+++ b/app/views/exams/_form.html.erb
@@ -1,19 +1,34 @@
-<%= form_for @exam do |f| %>
+<%= form_for @exam, html: { multipart: true, class: "form-horizontal" } do |f| %>
   <%= render "shared/error_messages", object: f.object %>
-  <div class="field">
-    <%= f.label :title %>
-    <%= f.text_field :title, class: "form-control" %>
-  </div>
-  <div class="field">
-    <%= f.label :category_id %>
-    <%= f.select :category_id, Category.all.collect{|u| [u.title, u.id]},
-      {include_blank: "Select"}, {class: "form-control"} %>
-  </div>
-  <div class="field">
-    <%= f.label :description %>
-    <%= f.text_area :description, cols: 10, rows: 10, class: "form-control" %>
-  </div>
-  <div class="field">
-    <%= f.submit t("button.create"), class: "btn btn-primary button" %>
-  </div>
+  <fieldset>
+    <legend>Basic Exam Information</legend>
+    <div class="form-group">
+      <div class="col-md-2 control-label"><%= f.label :title %></div>
+      <div class="col-md-4">
+        <%= f.text_field :title, class: "form-control" %>
+      </div>
+    </div>
+    <div class="form-group">
+      <div class="col-md-2 control-label"><%= f.label :category_id %></div>
+      <div class="col-md-4">
+        <%= f.select :category_id, Category.all.collect{|u| [u.title, u.id]},
+          {include_blank: "Select"}, {class: "form-control"} %>
+        </div>
+    </div>
+    <div class="form-group">
+      <div class="col-md-2 control-label"><%= f.label :description %></div>
+      <div class="col-md-10">
+        <%= f.text_area :description, rows: 7, class: "form-control" %>
+      </div>
+    </div>
+    <div class="form-group">
+      <div class="col-md-2 control-label"><%= f.label :avatar %></div>
+      <div class="col-md-4"><%= f.file_field :avatar %></div>
+    </div>
+    <div class="form-group">
+      <div class="col-md-4 col-md-offset-2">
+        <%= f.submit t("button.create"), class: "btn btn-primary button" %>
+      </div>
+    </div>
+  </fieldset>
 <% end %>
