--- a/app/views/exams/index.html.erb
+++ b/app/views/exams/index.html.erb
@@ -1,24 +1,30 @@
-<h1><%= t ".my_exams" %></h1>
-<table class="table table-striped">
-  <tr>
-    <td><%= t "exams.index.title" %></td>
-    <td><%= t "exams.index.preview" %></td>
-    <td><%= t "exams.index.share" %></td>
-    <td><%= t "exams.index.report" %></td>
-    <td><%= t "exams.index.last_modified" %></td>
-  </tr>
-  <% @exams.each do |exam| %>
-    <tr>
-      <td><%= exam.title %></td>
-      <td>
-        <span class="glyphicon glyphicon-eye-open style-span" aria-hidden="true" ></span>
-      </td>
-      <td><span class="glyphicon glyphicon glyphicon-globe style-span" aria-hidden="true"></span></td>
-      <td><span class="glyphicon glyphicon-align-justify style-span" aria-hidden="true"></span></td>
-      <td><%= exam.created_at %></td>
-    </tr>
-  <% end %>
-</table>
+<div class="panel panel-primary">
+  <div class="panel-heading" style="font-size:large">
+    <%= t ".my_exams" %>
+  </div>
+  <div class="panel-body">
+    <table class="table">
+      <tr>
+        <td><%= t "exams.index.title" %></td>
+        <td><%= t "exams.index.preview" %></td>
+        <td><%= t "exams.index.share" %></td>
+        <td><%= t "exams.index.report" %></td>
+        <td><%= t "exams.index.last_modified" %></td>
+      </tr>
+      <% @exams.each do |exam| %>
+        <tr>
+          <td><%= link_to exam.title, exam_path(exam) %></td>
+          <td>
+            <span class="glyphicon glyphicon-eye-open style-span" aria-hidden="true" ></span>
+          </td>
+          <td><span class="glyphicon glyphicon glyphicon-globe style-span" aria-hidden="true"></span></td>
+          <td><span class="glyphicon glyphicon-align-justify style-span" aria-hidden="true"></span></td>
+          <td><%= exam.created_at %></td>
+        </tr>
+      <% end %>
+    </table>
+  </div>
+</div>
 <div class="row">
   <%= will_paginate @exams %>
 </div>
