--- a/app/views/exams/new.html.erb
+++ b/app/views/exams/new.html.erb
@@ -1,6 +1,7 @@
-<div class="panel panel-primary">
+<div class="panel panel-green">
   <div class="panel-heading" style="font-size:large;">
     <%= t "exams.new" %>
   </div>
   <div class="panel-body"><%= render "form" %></div>
+  <div class="panel-footer"></div>
 </div>
