--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,7 @@
     <%= csrf_meta_tags %>
   </head>
   <body>
-    <div class="header row">
+    <div class="header">
       <%= render "layouts/header" %>
     </div>
 
@@ -18,7 +18,7 @@
         <%= yield %>
     </div>
 
-    <div class="footer row">
+    <div class="footer">
       <%= render "layouts/footer" %>
     </div>
   </body>
