--- a/app/views/admin/categories/edit.html.erb
+++ b/app/views/admin/categories/edit.html.erb
@@ -1,3 +1,4 @@
+<% provide :title, t("title.edit_category") %>
 <h1><%= t "category.edit.edit_cate" %></h1>
 <div class="row">
   <%= render "form" %>
