--- a/app/views/exams/_form.html.erb
+++ b/app/views/exams/_form.html.erb
@@ -5,7 +5,7 @@
     <div class="form-group">
       <div class="col-md-2 control-label"><%= f.label :title %></div>
       <div class="col-md-4">
-        <%= f.text_field :title, class: "form-control" %>
+        <%= f.text_field :title, placeholder: "Title (required)", class: "form-control" %>
       </div>
     </div>
     <div class="form-group">
@@ -18,7 +18,8 @@
     <div class="form-group">
       <div class="col-md-2 control-label"><%= f.label :description %></div>
       <div class="col-md-10">
-        <%= f.text_area :description, rows: 7, class: "form-control" %>
+        <%= f.text_area :description, rows: 7,
+          placeholder: "Description (required)", class: "form-control" %>
       </div>
     </div>
     <div class="form-group">
