--- a/app/views/groups/edit.html.erb
+++ b/app/views/groups/edit.html.erb
@@ -5,3 +5,6 @@
   </div>
   <div class="panel-body"><%= render "form" %></div>
 </div>
+<div class="row">
+  <%= link_to t("button.back"), :back, class: "btn btn-primary" %>
+</div>
