--- a/app/views/admin/categories/index.html.erb
+++ b/app/views/admin/categories/index.html.erb
@@ -1,3 +1,4 @@
+<% provide :title, t("title.show_all_category") %>
 <h2><%= t "category.index.all" %></h2>
 <div class="row">
   <table class="table">
