--- a/app/views/groups/_form.html.erb
+++ b/app/views/groups/_form.html.erb
@@ -17,7 +17,7 @@
     </div>
     <div class="form-group">
       <div class="col-md-4 col-md-offset-2">
-        <%= f.submit t("button.create"), class: "btn btn-primary button" %>
+        <%= f.submit t("button.submit"), class: "btn btn-primary button" %>
       </div>
     </div>
   </fieldset>
