--- a/app/views/questions/_form.html.erb
+++ b/app/views/questions/_form.html.erb
@@ -2,7 +2,7 @@
   <%= render "shared/error_messages", object: f.object %>
   <div class="form-group">
     <%= f.label :title %>
-    <%= f.text_field :title, class: "form-control" %>
+    <%= f.cktext_area :title, class: "form-control ckeditor" %>
   </div>
   <div class="form-group">
     <%= f.label :feedback %>
@@ -10,14 +10,15 @@
   </div>
   <div class="form-group question_type">
     <%= f.label :question_type %>
-    <%= f.select :question_type, Question.question_types.keys.to_a,{},
+    <%= f.select :question_type, {"Single Choice" =>"single_choice","Multiple Choice" => "multiple_choice"},{},
       class: "form-control question-select" %>
   </div>
   <div class="form-group">
     <%= f.label :avatar %>
     <%= f.file_field :avatar %>
   </div>
-
+  <p>Questions</p>
+  <hr>
   <div class="choice">
     <%= f.fields_for :answers do |builder| %>
       <%= render "answer_fields", f: builder %>
