--- a/app/views/questions/edit.html.erb
+++ b/app/views/questions/edit.html.erb
@@ -1,10 +1,10 @@
 <% provide :title, t("title.edit_question") %>
-<div class="col-md-8 col-md-offset-2">
+<div class="col-md-12" data-no-turbolink>
   <%= form_for [@temp, @question], method: :patch do |f| %>
     <%= render "shared/error_messages", object: f.object %>
     <div class="form-group">
       <%= f.label :title %>
-      <%= f.text_field :title, class: "form-control" %>
+      <%= f.cktext_area :title, class: "form-control ckeditor" %>
     </div>
     <div class="form-group">
       <%= f.label :feedback %>
@@ -12,14 +12,15 @@
     </div>
     <div class="form-group question_type">
       <%= f.label :question_type %>
-      <%= f.select :question_type, Question.question_types.keys.to_a,{},
+      <%= f.select :question_type, {"Single Choice" =>"single_choice","Multiple Choice" => "multiple_choice"},{},
         class: "form-control question-select" %>
     </div>
     <div class="form-group">
       <%= f.label :avatar %>
       <%= f.file_field :avatar %>
     </div>
-
+    <span>Questions</span>
+    <hr>
     <div class="choice">
       <%= f.fields_for :answers do |builder| %>
         <%= render "answer_fields", f: builder %>
