--- a/app/views/questions/new.html.erb
+++ b/app/views/questions/new.html.erb
@@ -1,6 +1,5 @@
 <% provide :title, t("title.create_question") %>
 <h1>new question</h1>
-<div class="col-md-8 col-md-offset-2">
+<div class="col-md-12">
   <%= render "form" %>
 </div>
-
